@@ -1,0 +1,474 @@
+{
+  "responseHeader":{
+    "status":0,
+    "QTime":83
+  },
+  "config":{
+    "luceneMatchVersion":"9.11.0",
+    "updateHandler":{
+      "commitWithin":{
+        "softCommit":true
+      },
+      "autoCommit":{
+        "maxTime":15000,
+        "openSearcher":false,
+        "maxDocs":-1
+      },
+      "autoSoftCommit":{
+        "maxDocs":-1,
+        "maxTime":3000
+      }
+    },
+    "query":{
+      "useFilterForSortedQuery":false,
+      "queryResultWindowSize":20,
+      "queryResultMaxDocsCached":200,
+      "enableLazyFieldLoading":true,
+      "maxBooleanClauses":1024,
+      "minPrefixQueryTermLength":-1,
+      "filterCache":{
+        "autowarmCount":"0",
+        "name":"filterCache",
+        "size":"512",
+        "initialSize":"512"
+      },
+      "queryResultCache":{
+        "autowarmCount":"0",
+        "name":"queryResultCache",
+        "size":"512",
+        "initialSize":"512"
+      },
+      "documentCache":{
+        "autowarmCount":"0",
+        "name":"documentCache",
+        "size":"512",
+        "initialSize":"512"
+      },
+      "fieldValueCache":{
+        "name":"fieldValueCache",
+        "size":"10000",
+        "initialSize":"10"
+      }
+    },
+    "requestHandler":{
+      "/select":{
+        "name":"/select",
+        "class":"solr.SearchHandler",
+        "defaults":{
+          "rows":10,
+          "echoParams":"explicit",
+          "q.op":"AND"
+        },
+        "invariants":{
+          "defType":"edismax",
+          "qf":"\n          Title_de^10 Title_en^10 Title_fr^10 Title_general^10\n          Description_de^5 Description_en^5 Description_fr^5 Description_general^5\n          SearchableText_de SearchableText_en SearchableText_fr SearchableText_general\n          sequence_number_string^1000 metadata^5 reference^1500\n     ",
+          "pf":"\n          Title_de^100 Title_en^100 Title_fr^100 Title_general^100\n          Description_de^50 Description_en^50 Description_fr^50 Description_general^50\n          SearchableText_de^20 SearchableText_en^20 SearchableText_fr^20 SearchableText_general^20\n          metadata^50 reference^1500\n     ",
+          "f.title.qf":"Title_de Title_en Title_fr Title_general",
+          "f.Title.qf":"Title_de Title_en Title_fr Title_general",
+          "f.description.qf":"Description_de Description_en Description_fr Description_general",
+          "f.Description.qf":"Description_de Description_en Description_fr Description_general",
+          "f.text.qf":"SearchableText_de SearchableText_en SearchableText_fr SearchableText_general",
+          "f.SearchableText.qf":"SearchableText_de SearchableText_en SearchableText_fr SearchableText_general",
+          "uf":"* -allowedRolesAndUsers -_query_",
+          "bq":"{!func}recip(ms(NOW,changed),3.858e-10,10,1)",
+          "lowercaseOperators":true
+        },
+        "last-components":["spellcheck"]
+      },
+      "/query":{
+        "name":"/query",
+        "class":"solr.SearchHandler",
+        "defaults":{
+          "echoParams":"explicit",
+          "wt":"json",
+          "indent":"true",
+          "df":"SearchableText"
+        }
+      },
+      "/update":{
+        "name":"/update",
+        "class":"solr.UpdateRequestHandler",
+        "invariants":{
+          "update.chain":"langid"
+        }
+      },
+      "/update/extract":{
+        "startup":"lazy",
+        "name":"/update/extract",
+        "class":"solr.extraction.ExtractingRequestHandler",
+        "defaults":{
+          "lowernames":"false",
+          "xpath":"/xhtml:html/xhtml:body//text()",
+          "fmap.content":"SearchableText",
+          "uprefix":"ignored_",
+          "ignoreTikaException":true
+        },
+        "invariants":{
+          "update.chain":"langid"
+        }
+      },
+      "/update/xslt":{
+        "startup":"lazy",
+        "name":"/update/xslt",
+        "class":"solr.scripting.xslt.XSLTUpdateRequestHandler",
+        "xsltCacheLifetimeSeconds":5
+      },
+      "/replication":{
+        "name":"/replication",
+        "class":"solr.ReplicationHandler",
+        "leader":{
+          "replicateAfter":"optimize",
+          "backupAfter":"optimize"
+        }
+      },
+      "/dataimport":{
+        "name":"/dataimport",
+        "class":"org.apache.solr.handler.dataimport.DataImportHandler",
+        "invariants":{
+          "update.chain":"langid"
+        },
+        "defaults":{
+          "config":"data-config.xml"
+        }
+      },
+      "/spell":{
+        "startup":"lazy",
+        "name":"/spell",
+        "class":"solr.SearchHandler",
+        "defaults":{
+          "spellcheck.dictionary":"default",
+          "spellcheck":"on",
+          "spellcheck.extendedResults":"true",
+          "spellcheck.count":"10",
+          "spellcheck.alternativeTermCount":"5",
+          "spellcheck.maxResultsForSuggest":"5",
+          "spellcheck.collate":"true",
+          "spellcheck.collateExtendedResults":"true",
+          "spellcheck.maxCollationTries":"10",
+          "spellcheck.maxCollations":"5"
+        },
+        "last-components":["spellcheck"]
+      },
+      "/suggest":{
+        "startup":"lazy",
+        "name":"/suggest",
+        "class":"solr.SearchHandler",
+        "defaults":{
+          "suggest":"true",
+          "suggest.count":"10"
+        },
+        "components":["suggest"]
+      },
+      "/tvrh":{
+        "startup":"lazy",
+        "name":"/tvrh",
+        "class":"solr.SearchHandler",
+        "defaults":{
+          "tv":true
+        },
+        "last-components":["tvComponent"]
+      },
+      "/update/json":{
+        "useParams":"_UPDATE_JSON",
+        "class":"solr.UpdateRequestHandler",
+        "invariants":{
+          "update.contentType":"application/json"
+        },
+        "name":"/update/json"
+      },
+      "/update/cbor":{
+        "useParams":"_UPDATE_CBOR",
+        "class":"solr.UpdateRequestHandler",
+        "invariants":{
+          "update.contentType":"application/cbor"
+        },
+        "name":"/update/cbor"
+      },
+      "/update/csv":{
+        "useParams":"_UPDATE_CSV",
+        "class":"solr.UpdateRequestHandler",
+        "invariants":{
+          "update.contentType":"application/csv"
+        },
+        "name":"/update/csv"
+      },
+      "/update/json/docs":{
+        "useParams":"_UPDATE_JSON_DOCS",
+        "class":"solr.UpdateRequestHandler",
+        "invariants":{
+          "update.contentType":"application/json",
+          "json.command":"false"
+        },
+        "name":"/update/json/docs"
+      },
+      "update":{
+        "class":"solr.V2UpdateRequestHandler",
+        "useParams":"_UPDATE_JSON_DOCS",
+        "name":"update"
+      },
+      "/config":{
+        "useParams":"_CONFIG",
+        "class":"solr.SolrConfigHandler",
+        "name":"/config"
+      },
+      "/schema":{
+        "class":"solr.SchemaHandler",
+        "useParams":"_SCHEMA",
+        "name":"/schema"
+      },
+      "/get":{
+        "class":"solr.RealTimeGetHandler",
+        "useParams":"_GET",
+        "defaults":{
+          "omitHeader":true
+        },
+        "name":"/get"
+      },
+      "/admin/ping":{
+        "class":"solr.PingRequestHandler",
+        "useParams":"_ADMIN_PING",
+        "invariants":{
+          "echoParams":"all",
+          "q":"{!lucene}*:*"
+        },
+        "name":"/admin/ping"
+      },
+      "/admin/segments":{
+        "class":"solr.SegmentsInfoRequestHandler",
+        "useParams":"_ADMIN_SEGMENTS",
+        "name":"/admin/segments"
+      },
+      "/admin/luke":{
+        "class":"solr.LukeRequestHandler",
+        "useParams":"_ADMIN_LUKE",
+        "name":"/admin/luke"
+      },
+      "/admin/system":{
+        "class":"solr.SystemInfoHandler",
+        "useParams":"_ADMIN_SYSTEM",
+        "name":"/admin/system"
+      },
+      "/admin/mbeans":{
+        "class":"solr.SolrInfoMBeanHandler",
+        "useParams":"_ADMIN_MBEANS",
+        "name":"/admin/mbeans"
+      },
+      "/admin/plugins":{
+        "class":"solr.PluginInfoHandler",
+        "name":"/admin/plugins"
+      },
+      "/admin/file":{
+        "class":"solr.ShowFileRequestHandler",
+        "useParams":"_ADMIN_FILE",
+        "name":"/admin/file"
+      },
+      "/export":{
+        "class":"solr.ExportHandler",
+        "useParams":"_EXPORT",
+        "components":["query"],
+        "invariants":{
+          "rq":"{!xport}",
+          "distrib":false
+        },
+        "name":"/export"
+      },
+      "/graph":{
+        "class":"solr.GraphHandler",
+        "useParams":"_ADMIN_GRAPH",
+        "invariants":{
+          "wt":"graphml",
+          "distrib":false
+        },
+        "name":"/graph"
+      },
+      "/stream":{
+        "class":"solr.StreamHandler",
+        "useParams":"_STREAM",
+        "invariants":{
+          "distrib":false
+        },
+        "name":"/stream"
+      },
+      "/sql":{
+        "class":"solr.SQLHandler",
+        "startup":"lazy",
+        "useParams":"_SQL",
+        "invariants":{
+          "distrib":false
+        },
+        "name":"/sql"
+      },
+      "/terms":{
+        "class":"solr.SearchHandler",
+        "useParams":"_TERMS",
+        "components":["terms"],
+        "defaults":{
+          "terms":true
+        },
+        "name":"/terms"
+      },
+      "/analysis/document":{
+        "class":"solr.DocumentAnalysisRequestHandler",
+        "startup":"lazy",
+        "useParams":"_ANALYSIS_DOCUMENT",
+        "name":"/analysis/document"
+      },
+      "/analysis/field":{
+        "class":"solr.FieldAnalysisRequestHandler",
+        "startup":"lazy",
+        "useParams":"_ANALYSIS_FIELD",
+        "name":"/analysis/field"
+      },
+      "/debug/dump":{
+        "class":"solr.DumpRequestHandler",
+        "useParams":"_DEBUG_DUMP",
+        "defaults":{
+          "echoParams":"explicit",
+          "echoHandler":true
+        },
+        "name":"/debug/dump"
+      },
+      "/tasks/cancel":{
+        "class":"solr.QueryCancellationHandler",
+        "useParams":"_TASK_CANCELLATION",
+        "components":["querycancellation"],
+        "name":"/tasks/cancel"
+      },
+      "/tasks/list":{
+        "class":"solr.ActiveTasksListHandler",
+        "useParams":"_LIST_TASKS",
+        "components":["activetaskslist"],
+        "name":"/tasks/list"
+      }
+    },
+    "queryResponseWriter":{
+      "xslt":{
+        "startup":"lazy",
+        "name":"xslt",
+        "class":"solr.scripting.xslt.XSLTResponseWriter",
+        "xsltCacheLifetimeSeconds":5
+      }
+    },
+    "searchComponent":{
+      "spellcheck":{
+        "name":"spellcheck",
+        "class":"solr.SpellCheckComponent",
+        "queryAnalyzerFieldType":"text_general",
+        "spellchecker":{
+          "accuracy":0.5,
+          "maxQueryFrequency":0.01,
+          "maxEdits":2,
+          "minPrefix":1,
+          "maxInspections":5,
+          "minQueryLength":4,
+          "name":"default",
+          "field":"SearchableText",
+          "classname":"solr.DirectSolrSpellChecker",
+          "distanceMeasure":"internal"
+        }
+      },
+      "suggest":{
+        "name":"suggest",
+        "class":"solr.SuggestComponent",
+        "suggester":{
+          "name":"mySuggester",
+          "lookupImpl":"FuzzyLookupFactory",
+          "dictionaryImpl":"DocumentDictionaryFactory",
+          "field":"cat",
+          "weightField":"price",
+          "suggestAnalyzerFieldType":"string",
+          "buildOnStartup":"false"
+        }
+      },
+      "tvComponent":{
+        "name":"tvComponent",
+        "class":"solr.TermVectorComponent"
+      }
+    },
+    "initParams":[{
+      "path":"/update/**,/query,/select,/tvrh,/elevate,/spell,update",
+      "defaults":{
+        "df":"SearchableText"
+      }
+    }],
+    "listener":[{
+      "event":"newSearcher",
+      "class":"solr.QuerySenderListener",
+      "queries":[ ]
+    },{
+      "event":"firstSearcher",
+      "class":"solr.QuerySenderListener",
+      "queries":[["q","static firstSearcher warming in solrconfig.xml"]]
+    }],
+    "directoryFactory":{
+      "name":"DirectoryFactory",
+      "class":"solr.NRTCachingDirectoryFactory"
+    },
+    "codecFactory":{
+      "class":"solr.SchemaCodecFactory"
+    },
+    "updateRequestProcessorChain":[{
+      "name":"langid",
+      "":[{
+        "class":"org.apache.solr.update.processor.LangDetectLanguageIdentifierUpdateProcessorFactory",
+        "langid.fl":"SearchableText,Description,Title",
+        "langid.langField":"_language_",
+        "langid.allowlist":"de,en,fr",
+        "langid.fallback":"general",
+        "langid.map":true,
+        "langid.map.individual":true,
+        "langid.map.keepOrig":true
+      },{
+        "class":"solr.LogUpdateProcessorFactory"
+      },{
+        "class":"solr.RunUpdateProcessorFactory"
+      }]
+    },{
+      "name":"sync.chain",
+      "":[{
+        "class":"org.apache.solr.update.processor.LangDetectLanguageIdentifierUpdateProcessorFactory",
+        "langid.fl":"SearchableText,Description,Title",
+        "langid.langField":"_language_",
+        "langid.allowlist":"de,en,fr",
+        "langid.fallback":"general",
+        "langid.map":true,
+        "langid.map.individual":true,
+        "langid.map.keepOrig":true
+      },{
+        "class":"org.apache.solr.scripting.update.ScriptUpdateProcessorFactory"
+      },{
+        "class":"solr.LogUpdateProcessorFactory"
+      },{
+        "class":"solr.RunUpdateProcessorFactory"
+      }]
+    }],
+    "updateHandlerupdateLog":{
+      "dir":""
+    },
+    "requestDispatcher":{
+      "handleSelect":false,
+      "httpCaching":{
+        "never304":true,
+        "etagSeed":"Solr",
+        "lastModFrom":"opentime",
+        "cacheControl":null
+      },
+      "requestParsers":{
+        "multipartUploadLimitKB":2147483647,
+        "addHttpRequestToContext":false,
+        "formUploadLimitKB":2147483647
+      }
+    },
+    "indexConfig":{
+      "useCompoundFile":false,
+      "maxBufferedDocs":-1,
+      "ramBufferSizeMB":100.0,
+      "ramPerThreadHardLimitMB":-1,
+      "maxCommitMergeWaitTime":-1,
+      "writeLockTimeout":-1,
+      "lockType":"native",
+      "infoStreamEnabled":true,
+      "metrics":{ }
+    }
+  }
+}
